<resources>
    <string name="app_name" translatable="false">JourTrip</string>

    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Have you forgotten your password?</string>
    <string name="create_account">Create account</string>
    <string name="log_in">Log in</string>
    <string name="required_field">Required field</string>
    <string name="password_must_be_different">Password must be different</string>
    <string name="required_email">Required email</string>
    <string name="back">Back</string>
    <string name="recover">Recover</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="sent_recovery_password_to_email_message">An email has been sent to your email address, check your Inbox</string>
    <string name="error_request_message">An error happened during the request</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign up</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="full_name">Full name</string>
    <string name="user_name">User name</string>
    <string name="success_registered_message">You have successfully registered</string>

    <string name="settings">Settings</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="error_loading_data">Error loading data</string>

    <string name="user_data">User data</string>
    <string name="update_data">Update data</string>
    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="logout">Logout</string>
    <string name="data_updated_correctly">Data updated correctly</string>
    <string name="select_action">Select an action</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="search_for_places">Search for places</string>
    <string name="nearby">Nearby</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="your_comment">Your comment</string>
    <string name="incorrect_user_password">Incorrect user or password</string>
    <string name="contacts">Contacts</string>
    <string name="error_request">Error in the request</string>
    <string name="follow_user_title">Follow user</string>
    <string name="unfollow_user_title">Unfollow user</string>
    <string name="unfollow_user_message">Do you want to not follow this user?</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="watch">Watch</string>
    <string name="remove">Remove</string>
    <string name="no_results_for_searching">No results were found for this search</string>
    <string name="needs_connection_to_internet">Needs connection to Internet</string>
    <string name="more_contacts">More contacts</string>
    <string name="search_contact">Search contact</string>
    <string name="accept">Accept</string>
    <string name="identify_fingerprint_title">Identify with your fingerprint</string>
    <string name="identify_fingerprint_message">Do you wish access to Jourtrip using your fingerprint?</string>
</resources>
